[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/Forge/test_forge.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Forge/DarkForge.tscn" id="2"]

[node name="TestForge" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 200.0
text = "Testing..."

[node name="ForgeContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkForge" parent="ForgeContainer" instance=ExtResource("2")]
layout_mode = 1
